# chip8-emulator-cpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake-multi-platform.yml
docs/: class_diagram.puml
include/: chip8_cpu.h  chip8_display.h  chip8_emulator.h  chip8_irand_gen.h  chip8_keyboard.h  chip8_memory.h  chip8_pcg_rand.h  chip8_timer.h  constants.h  emulator_types.h  sdl_audio.h  sdl_display.h  sdl_input.h
src/: chip8_cpu.cpp  main.cpp
tests/: mock_rng.h  test_cpu.cpp  test_display.cpp  test_keyboard.cpp  test_memory.cpp  test_pcg_random.cpp  test_sdl_input.cpp  test_timer.cpp
